Fix cutoff for details section in player setup view.

--- a/src/styles/player_home.less
+++ b/src/styles/player_home.less
@@ -16,6 +16,9 @@
             text-decoration: none;
         }
     }
+    .accordion-body {
+        max-height: none;
+    }
 }
 
 .terraformed-banner {
